Update dashboard integration and period log UI

--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -3,17 +3,22 @@
 <head>
     <link rel="stylesheet" href="../css/style.css">
     <script src="../js/app.js" defer></script>
+    <script src="../js/dashboard.js" defer></script>
 </head>
 <body>
 
 <!-- Include navbar -->
 <div id="navbar"></div>
 
-<div class="container">
-    <h2>PAGE TITLE HERE</h2>
 
-    <div class="card">
-        Content coming soon...
+
+<h3>Recent Period Logs</h3>
+<div id="recent_logs"></div>
+
+<div style="margin-top:20px;">
+  <a href="period_log.html">Go to Period Log Page</a>
+</div>
+
     </div>
 </div>
 
