--- a/frontend/pages/calendar.html
+++ b/frontend/pages/calendar.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="../js/app.js" defer></script>
+  <link rel="stylesheet" href="../css/style.css">
+  <script src="../js/app.js" defer></script>
+  <script src="../js/calendar.js" defer></script>
 </head>
 <body>
 
-<!-- Include navbar -->
 <div id="navbar"></div>
 
 <div class="container">
-    <h2>PAGE TITLE HERE</h2>
+  <h2>Calendar</h2>
 
-    <div class="card">
-        Content coming soon...
+  <div class="card">
+    <div id="calendar_controls" style="display:flex; justify-content:space-between; align-items:center;">
+      <button id="prev_month">◀</button>
+      <h3 id="month_title"></h3>
+      <button id="next_month">▶</button>
     </div>
+
+    <div id="calendar_grid"></div>
+  </div>
 </div>
 
 <script>
-    // Load navbar component
-    fetch("../components/navbar.html")
-        .then(res => res.text())
-        .then(data => {
-            document.getElementById("navbar").innerHTML = data;
-        });
+  fetch("../components/navbar.html")
+    .then(r => r.text())
+    .then(html => document.getElementById("navbar").innerHTML = html);
 </script>
 
 </body>
