--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -1,35 +1,35 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="../js/app.js" defer></script>
-    <script src="../js/dashboard.js" defer></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Dashboard • Period Tracker</title>
+  <link rel="stylesheet" href="../css/style.css" />
+
+  <script defer src="../js/config.js"></script>
+  <script defer src="../js/api.js"></script>
+  <script defer src="../js/auth.js"></script>
+  <script defer src="../js/app.js"></script>
+  <script defer src="../js/dashboard.js"></script>
 </head>
 <body>
+  <div id="navbar"></div>
 
-<!-- Include navbar -->
-<div id="navbar"></div>
+  <div class="container">
+    <h2>Dashboard</h2>
 
+    <div class="card">
+      <p id="welcomeText"></p>
 
+      <h3>Recent Period Logs</h3>
+      <div id="recent_logs"></div>
 
-<h3>Recent Period Logs</h3>
-<div id="recent_logs"></div>
-
-<div style="margin-top:20px;">
-  <a href="period_log.html">Go to Period Log Page</a>
-</div>
-
+      <div style="margin-top:16px;">
+        <a class="btn" href="period_log.html">+ Add / View Logs</a>
+      </div>
     </div>
-</div>
+  </div>
 
-<script>
-    // Load navbar component
-    fetch("../components/navbar.html")
-        .then(res => res.text())
-        .then(data => {
-            document.getElementById("navbar").innerHTML = data;
-        });
-</script>
-
+  <script>requireAuth();</script>
 </body>
 </html>
