--- a/frontend/pages/insights.html
+++ b/frontend/pages/insights.html
@@ -1,29 +1,28 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="../css/style.css">
-  <script src="../js/app.js" defer></script>
-  <script src="../js/insights.js" defer></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Insights • Period Tracker</title>
+  <link rel="stylesheet" href="../css/style.css" />
+
+  <script defer src="../js/config.js"></script>
+  <script defer src="../js/api.js"></script>
+  <script defer src="../js/auth.js"></script>
+  <script defer src="../js/app.js"></script>
+  <script defer src="../js/insights.js"></script>
 </head>
 <body>
+  <div id="navbar"></div>
 
-<div id="navbar"></div>
-
-<div class="container">
-  <h2>Insights</h2>
-
-  <div class="card">
-    <h3>Cycle Summary</h3>
-    <p id="avg_cycle"></p>
-    <p id="next_prediction"></p>
+  <div class="container">
+    <h2>Insights</h2>
+    <div class="card">
+      <div id="insightsBox"></div>
+      <p id="ins_msg" style="color:red;"></p>
+    </div>
   </div>
-</div>
 
-<script>
-  fetch("../components/navbar.html")
-    .then(r => r.text())
-    .then(html => document.getElementById("navbar").innerHTML = html);
-</script>
-
+  <script>requireAuth();</script>
 </body>
 </html>
