--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -1,26 +1,34 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="../css/style.css">
-    <script defer src="../js/login.js"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Login • Period Tracker</title>
+  <link rel="stylesheet" href="../css/style.css" />
+
+  <link rel="stylesheet" href="../css/style.css">
+
+<script defer src="../js/config.js"></script>
+<script defer src="../js/auth.js"></script>
+<script defer src="../js/login.js"></script>
+
 </head>
-
 <body>
-
-<div class="container">
+  <div class="container">
     <h2>Login</h2>
 
     <div class="card">
-        <input type="text" id="username" placeholder="Username"><br><br>
-        <input type="password" id="password" placeholder="Password"><br><br>
+      <label>Username</label>
+      <input id="username" type="text" placeholder="Enter username" />
 
-        <button onclick="loginUser()">Login</button><br><br>
+      <label>Password</label>
+      <input id="password" type="password" placeholder="Enter password" />
 
-        <p>Don't have an account? <a href="register.html">Register</a></p>
+      <button type="button" id="loginBtn">Login</button>
 
-        <p id="msg" style="color:red;"></p>
+      <p id="login_msg" style="color:red; margin-top:10px;"></p>
+      <p style="margin-top:10px;">No account? <a href="register.html">Register</a></p>
     </div>
-</div>
-
+  </div>
 </body>
 </html>
