--- a/frontend/pages/mood.html
+++ b/frontend/pages/mood.html
@@ -1,30 +1,26 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="../js/app.js" defer></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Mood • Period Tracker</title>
+  <link rel="stylesheet" href="../css/style.css" />
+
+  <script defer src="../js/config.js"></script>
+  <script defer src="../js/api.js"></script>
+  <script defer src="../js/auth.js"></script>
+  <script defer src="../js/app.js"></script>
 </head>
 <body>
+  <div id="navbar"></div>
 
-<!-- Include navbar -->
-<div id="navbar"></div>
-
-<div class="container">
-    <h2>PAGE TITLE HERE</h2>
-
+  <div class="container">
+    <h2>Mood Tracker</h2>
     <div class="card">
-        Content coming soon...
+      <p>Coming next: mood logging + AI mood prediction.</p>
     </div>
-</div>
+  </div>
 
-<script>
-    // Load navbar component
-    fetch("../components/navbar.html")
-        .then(res => res.text())
-        .then(data => {
-            document.getElementById("navbar").innerHTML = data;
-        });
-</script>
-
+  <script>requireAuth();</script>
 </body>
 </html>
