--- a/frontend/pages/period_log.html
+++ b/frontend/pages/period_log.html
@@ -1,46 +1,58 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="../styles/style.css">
-    <script defer src="../js/period_log.js"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Period Log • Period Tracker</title>
+  <link rel="stylesheet" href="../css/style.css" />
+
+  <script defer src="../js/config.js"></script>
+  <script defer src="../js/api.js"></script>
+  <script defer src="../js/auth.js"></script>
+  <script defer src="../js/app.js"></script>
+  <script defer src="../js/period_log.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h2>Log Your Period</h2>
+  <div id="navbar"></div>
 
-        <div class="card">
-            <label>Start Date:</label>
-            <input type="date" id="start_date"><br>
+  <div class="container">
+    <h2>Log Your Period</h2>
 
-            <label>End Date:</label>
-            <input type="date" id="end_date"><br>
+    <div class="card">
+      <label>Start Date</label>
+      <input type="date" id="start_date" />
 
-            <label>Cycle Length (days):</label>
-            <input type="number" id="cycle_length"><br>
+      <label>End Date</label>
+      <input type="date" id="end_date" />
 
-            <label>Flow Level:</label>
-            <select id="flow_level">
-                <option value="">Select</option>
-                <option value="light">Light</option>
-                <option value="medium">Medium</option>
-                <option value="heavy">Heavy</option>
-            </select><br>
+      <label>Cycle Length (days)</label>
+      <input type="number" id="cycle_length" placeholder="e.g., 28" />
 
-            <label>Mood:</label>
-            <input type="text" id="mood" placeholder="crampy, tired, ok..."><br>
+      <label>Flow Level</label>
+      <select id="flow_level">
+        <option value="">Select</option>
+        <option value="light">Light</option>
+        <option value="medium">Medium</option>
+        <option value="heavy">Heavy</option>
+      </select>
 
-            <label>Symptoms:</label>
-            <input type="text" id="symptoms" placeholder="cramps, headache"><br>
+      <label>Mood</label>
+      <input type="text" id="mood" placeholder="tired, ok, stressed..." />
 
-            <label>Notes:</label>
-            <textarea id="notes" rows="3"></textarea><br>
+      <label>Symptoms</label>
+      <input type="text" id="symptoms" placeholder="cramps, headache..." />
 
-            <button onclick="savePeriodLog()">Save Log</button>
-            <p id="log_msg" style="color:red;"></p>
-        </div>
+      <label>Notes</label>
+      <textarea id="notes" rows="3" placeholder="Any notes..."></textarea>
 
-        <h3>Your Previous Logs</h3>
-        <div id="logs_list"></div>
+      <button type="button" id="saveBtn">Save Log</button>
+      <p id="log_msg" style="color:red;"></p>
     </div>
+
+    <h3>Your Previous Logs</h3>
+    <div id="logs_list"></div>
+  </div>
+
+  <script>requireAuth();</script>
 </body>
 </html>
