--- a/frontend/pages/symptoms.html
+++ b/frontend/pages/symptoms.html
@@ -1,27 +1,26 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="../css/style.css">
-    <script defer src="../js/register.js"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Symptoms • Period Tracker</title>
+  <link rel="stylesheet" href="../css/style.css" />
+
+  <script defer src="../js/config.js"></script>
+  <script defer src="../js/api.js"></script>
+  <script defer src="../js/auth.js"></script>
+  <script defer src="../js/app.js"></script>
 </head>
-
 <body>
+  <div id="navbar"></div>
 
-<div class="container">
-    <h2>Create Account</h2>
-
+  <div class="container">
+    <h2>Symptoms Tracker</h2>
     <div class="card">
-        <input type="text" id="username" placeholder="Username"><br><br>
-        <input type="email" id="email" placeholder="Email"><br><br>
-        <input type="password" id="password" placeholder="Password"><br><br>
-
-        <button onclick="registerUser()">Register</button><br><br>
-
-        <p>Already have an account? <a href="login.html">Login</a></p>
-
-        <p id="message" style="color:red;"></p>
+      <p>Coming next: symptom logging + AI symptom prediction.</p>
     </div>
-</div>
+  </div>
 
+  <script>requireAuth();</script>
 </body>
 </html>
