--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -27,7 +27,8 @@
       <label>Password</label>
       <input id="password" type="password" placeholder="Create password" />
 
-      <button type="button" id="registerBtn">Register</button>
+      <button id="registerBtn">Register</button>
+
 
       <p id="message" style="color:red; margin-top:10px;"></p>
       <p style="margin-top:10px;">Already have an account? <a href="login.html">Login</a></p>
