--- a/frontend/pages/symptoms.html
+++ b/frontend/pages/symptoms.html
@@ -4,23 +4,96 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Symptoms • Period Tracker</title>
+
   <link rel="stylesheet" href="../css/style.css" />
 
   <script defer src="../js/config.js"></script>
-  <script defer src="../js/api.js"></script>
   <script defer src="../js/auth.js"></script>
   <script defer src="../js/app.js"></script>
+  <script defer src="../js/symptoms.js"></script>
+
+  <style>
+    .chips { display:flex; flex-wrap:wrap; gap:10px; margin:10px 0; }
+    .chip {
+      border: 1px solid #ddd;
+      border-radius: 999px;
+      padding: 8px 12px;
+      cursor: pointer;
+      user-select: none;
+      background: #fff;
+      font-weight: 600;
+    }
+    .chip.active {
+      background: #ffd6e5;
+      border-color: #ff7aa6;
+    }
+    .row { display:flex; gap:12px; align-items:center; }
+    .row > * { flex: 1; }
+    .muted { color: #666; font-size: 14px; }
+  </style>
 </head>
+
 <body>
   <div id="navbar"></div>
 
   <div class="container">
     <h2>Symptoms Tracker</h2>
+
+    <!-- Add Symptom Log -->
     <div class="card">
-      <p>Coming next: symptom logging + AI symptom prediction.</p>
+      <h3>Log Today’s Symptoms</h3>
+
+      <label>Date</label>
+      <input type="date" id="symDate" />
+
+      <label>Select symptoms</label>
+      <div class="chips" id="symptomChips"></div>
+      <p class="muted">Click symptoms to select/unselect.</p>
+
+      <div class="row">
+        <div>
+          <label>Severity (1 - 10)</label>
+          <input type="number" id="symSeverity" min="1" max="10" value="5" />
+        </div>
+        <div>
+          <label>Quick view</label>
+          <div class="card" style="margin:0; padding:10px;">
+            <div><strong>Selected:</strong> <span id="selectedCount">0</span></div>
+            <div class="muted" id="selectedPreview"></div>
+          </div>
+        </div>
+      </div>
+
+      <label>Note (optional)</label>
+      <textarea id="symNote" rows="3" placeholder="Any details..."></textarea>
+
+      <button id="saveSymBtn">Save Symptoms</button>
+      <p id="sym_msg" style="color:red; margin-top:10px;"></p>
+    </div>
+
+   <!-- AI tip -->
+<div class="card">
+  <h3>AI Relief Tips</h3>
+
+  <div class="row" style="margin-bottom:10px;">
+    <button id="getAiTipsBtn">Get Tips</button>
+  </div>
+
+  <div id="aiSymTip" class="bubble bot">Save symptoms or select symptoms, then click “Get Tips”.</div>
+  <p id="aiSymMsg" style="color:red;"></p>
+</div>
+
+
+    <!-- History -->
+    <div class="card">
+      <h3>Your Symptom History</h3>
+      <div id="symList"></div>
     </div>
   </div>
 
-  <script>requireAuth();</script>
+  <script>
+    requireAuth();
+    loadNavbar();
+  </script>
 </body>
 </html>
